# SceneRTXTester

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TESTING.md  build.ps1  run.ps1
.github/workflows/: autotests.yml
Headers/: MathUtils.h  SceneMetaLoader.h
Headers/Classes/: BVHBuilder.h  CUDARenderer.h  Camera.h  HIPRenderer.h  MetalRenderer.h  OBJLoader.h  RenderManager.h  Renderer.h  Scene.h  SceneJSONLoader.h  SceneLoader.h  SceneLoaderFactory.h  SceneObject.h
Headers/Patterns/: REFACTORING_GUIDE.md  RenderCommand.h  RendererFactory.h  RendererRegistry.h
Headers/ShaderSpecific/: CUDARendererFunctions.h  HIPRendererFunctions.h  HIPRendererInternals.h  MetalRendererFunctions.h
Headers/Structures/: AABB.h  BVHNode.h  CameraData.h  HitInfo.h  Light.h  MonitoringFrameStats.h  Point3D.h  Point4D.h  Ray.h  Triangles.h  UV.h
Results/: ComplexFrameStats.txt
Results/Info/: FrameStats_GPU.txt
Scene/UE5/SubwayTonnel/: scene.json
SceneRTSceneExporter/: SceneRTSceneExporter.Build.cs
SceneRTSceneExporter/Private/: SceneRTSceneExportSettings.cpp  SceneRTSceneExporterCore.cpp  SceneRTSceneExporterModule.cpp  SceneRTSceneExporterModule.h
SceneRTSceneExporter/Public/: SceneRTExportFormat.h  SceneRTSceneExportSettings.h  SceneRTSceneExporterCore.h
SceneRTSceneExporterV2/: SceneRTSceneExporterV2.Build.cs
SceneRTSceneExporterV2/Private/: SceneRTV2Context.cpp  SceneRTV2Context.h  SceneRTV2ExportSettings.cpp  SceneRTV2ExporterCore.cpp  SceneRTV2ExporterModule.cpp  SceneRTV2ExporterModule.h  SceneRTV2Identity.cpp  SceneRTV2Identity.h  SceneRTV2Landscape.cpp  SceneRTV2Landscape.h  SceneRTV2Material.cpp  SceneRTV2Material.h  SceneRTV2Mesh.cpp  SceneRTV2Mesh.h  SceneRTV2PCH.h  SceneRTV2SceneEntities.cpp  SceneRTV2SceneEntities.h  SceneRTV2SplineMesh.cpp  SceneRTV2SplineMesh.h  SceneRTV2Texture.cpp  SceneRTV2Texture.h  SceneRTV2Writer.cpp  SceneRTV2Writer.h
SceneRTSceneExporterV2/Public/: SceneRTV2ExportSettings.h  SceneRTV2ExporterCore.h  SceneRTV2Format.h
Shader/macOS/: RayTrace.metal
Shader/windows/AMD/: RayTraceHIP.hip.cpp
Shader/windows/NVIDIA/: RayTraceCuda.cu
Source/: main.cpp
Source/Common/: BVHBuilder.cpp  Camera.cpp  OBJLoader.cpp  RenderManager.cpp  Renderer.cpp  RendererFactory.cpp  RendererRegistry.cpp  Scene.cpp  SceneJSONLoader.cpp  SceneLoader.cpp  SceneLoaderFactory.cpp  SceneMetaLoader.cpp  SceneObject.cpp
Source/macOSSpecific/: MetalRenderer.cpp  MetalRenderer.mm
Source/windowsSpecific/AMD/: HIPRenderer.cpp  HIPRendererFunctions.cpp
Source/windowsSpecific/NVIDIA/: CUDARenderer.cpp  CUDARendererFunctions.cpp
benchmarks/: SceneBenchmarkMain.cpp
tests/: TestFramework.h  TestMain.cpp
tests/integration/: OBJLoaderIntegrationTests.cpp  SceneJSONLoaderIntegrationTests.cpp  TestFsUtils.h
tests/system/: ScenePipelineSmokeTests.cpp  VisualRegressionTests.cpp
tests/unit/: CameraTests.cpp  MathUtilsTests.cpp  RenderCommandTests.cpp  RendererRegistryTests.cpp  SceneLoaderFactoryTests.cpp  SceneObjectTests.cpp
